[tool.poetry]
name = "jupyterlab"
version = "3.3.2"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
# part of rasa
# pandas = "^1.3.2"
nltk = "^3.7"
# part of rasa
# matplotlib = ">=3.3"
seaborn = "^0.11.2"
scattertext = "^0.1.6"
spacy = "^3.2.4"
lime = "^0.2.0"
plotly = "^5.6.0"
cufflinks = "^0.17.3"
xgboost = "^1.5.2"
lightgbm = "^3.3.2"
catboost = "^1.0.4"
ipywidgets = "^7.7.0"
# part of rasa
# tensorflow-hub = "^0.12.0"
# part of rasa
# tensorflow-text = ">=2.3.0"
transformers = "^4.17.0"
torch = "^1.11.0"
torchvision = "^0.12.0"
hyperopt = "^0.2.7"
pyodbc = "^4.0.32"
# latest requires scikit-learn >= 1.0.0
yellowbrick = "^1.3.post1"
kneed = "^0.7.0"
pyarrow = "^7.0.0"
# rasa uses lower version
dask = {version = "^2021.11.2", extras = ["complete"]}
# latest requires scikit-learn >= 1.0.0
scikeras = "^0.4.1"
skorch = "^0.11.0"
human-learn = "^0.3.1"
# latest dask-ml requires numpy >=1.20.0, 2021.x.x requires scikit-learn >=1.0.0
dask-ml = {version = "^1.9.0", extras = ["complete"]}
# not compatible with tf 2.7
# whatlies = {version = "^0.6.5", extras = ["all"]}
rasa = "^3.1.0"
openpyxl = "^3.0.9"
xlrd = "^2.0.1"
XlsxWriter = "^3.0.3"
python-lsp-server = {version = "^1.4.1", extras = ["all"]}
jupyterlab-lsp = "^3.10.1"
Cython = "^0.29.26"
voila = "^0.3.5"
papermill = "^2.3.4"
fuzzywuzzy = {version = "^0.18.0", extras = ["speedup"]}
streamlit = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
